--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@algolia/autocomplete-js": "^1.7.1",
     "@algolia/client-search": "^4.14.2",
     "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
-    "@directus/sdk": "^10.3.3",
-    "@ircsignpost/signpost-base": "15.20.0",
+    "@directus/sdk": "10.3.3",
+    "@ircsignpost/signpost-base": "15.21.0",
     "@next/env": "^12.2.4",
     "@react-spring/web": "^9.5.4",
     "@vercel/og": "^0.5.6",
